Ensure all of intro modal content is visible on scroll

--- a/sass/components/_introModal.scss
+++ b/sass/components/_introModal.scss
@@ -35,9 +35,9 @@ $intro-background-color: #dcd3c7;
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
-		height: 100%;
+		min-height: 100%;
 		position: relative;
-		margin: 0 auto;
+		margin: 0 auto 20px auto;
 	}
 
 	.p0 {
